file(GLOB SRCS *.cpp)

string(REPLACE "/" ";" CUR_DIRECTORY_TOKENS ${CMAKE_CURRENT_LIST_DIR})
LIST(REVERSE CUR_DIRECTORY_TOKENS)
LIST(GET CUR_DIRECTORY_TOKENS 0 PROJECT_NAME)

add_executable(${PROJECT_NAME} ${SRCS})

target_link_libraries(${PROJECT_NAME} gtest gmock)

add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
